// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button create expanded section content correctly 1`] = `
<List
  className="myClass"
  id="button1"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className="list-component list myClass"
    id="button1"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <ListItem
      className="myClass"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <div
        className="listitem-component listItem myClass"
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <ItemContent>
          <div
            className="item-content-component content undefined"
          >
            Some Content
          </div>
        </ItemContent>
        <ExpandedSection
          expanded={true}
        >
          <div
            className="expanded-section-component expandedSection undefined"
            onClick={[Function]}
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="arrow"
            >
              <div
                style={
                  Object {
                    "height": "100%",
                    "position": "relative",
                    "width": "100%",
                  }
                }
              >
                <div
                  className="innerArrow"
                />
                <div
                  className="borderArrow"
                />
              </div>
            </div>
            Some ExpandedSection Content
          </div>
        </ExpandedSection>
      </div>
    </ListItem>
  </div>
</List>
`;

exports[`Button renders List correctly 1`] = `
<div
  className="list-component list myClass"
  id="button1"
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`Button renders ListItem correctly 1`] = `
<div
  className="listitem-component listItem myClass"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <ItemContent>
    test
  </ItemContent>
  <ExpandedSection
    expanded={true}
  >
    expanded test
  </ExpandedSection>
</div>
`;

exports[`Button renders with multiple children 1`] = `
<List
  className="myClass"
  id="button1"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className="list-component list myClass"
    id="button1"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <ListItem
      className="myClass"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <div
        className="listitem-component listItem myClass"
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <ItemContent>
          <div
            className="item-content-component content undefined"
          >
            test
          </div>
        </ItemContent>
        <ExpandedSection
          expanded={true}
        >
          <div
            className="expanded-section-component expandedSection undefined"
            onClick={[Function]}
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="arrow"
            >
              <div
                style={
                  Object {
                    "height": "100%",
                    "position": "relative",
                    "width": "100%",
                  }
                }
              >
                <div
                  className="innerArrow"
                />
                <div
                  className="borderArrow"
                />
              </div>
            </div>
            expanded test
          </div>
        </ExpandedSection>
      </div>
    </ListItem>
    <ListItem
      className="myClass"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <div
        className="listitem-component listItem myClass"
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <ItemContent>
          <div
            className="item-content-component content undefined"
          >
            test
          </div>
        </ItemContent>
        <ExpandedSection
          expanded={false}
        >
          <div
            className="expanded-section-component expandedSection undefined"
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              className="arrow"
            >
              <div
                style={
                  Object {
                    "height": "100%",
                    "position": "relative",
                    "width": "100%",
                  }
                }
              >
                <div
                  className="innerArrow"
                />
                <div
                  className="borderArrow"
                />
              </div>
            </div>
            expanded test
          </div>
        </ExpandedSection>
      </div>
    </ListItem>
  </div>
</List>
`;
